# docs/swagger.json
@@ -95,6 +95,50 @@
                     }
                 }
             }
+        },
+        "/todos/{id}": {
+            "get": {
+                "description": "get to-do by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "todos"
+                ],
+                "summary": "Get To-do by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Todos id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/todos.GetTodoRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/responseApi.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/responseApi.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -176,6 +220,20 @@
                     "items": {
                         "$ref": "#/definitions/models.Todo"
                     }
+                }
+            }
+        },
+        "todos.GetTodoRes": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "todo": {
+                    "$ref": "#/definitions/models.Todo"
                 }
             }
         }
